# postmanq

./: .env.dist  .env.example  .gitignore  Makefile  WORKSPACE  buf.gen.yaml  buf.work.yaml  buf.yaml  build.sh  config.example.yml  generate_mocks.sh  go.mod  go.sum  run_tests.sh
.github/workflows/: release.yml
api/openapi-spec/: api.swagger.yaml
cli/: BUILD.bazel  app.go  arguments.go  params.go
cmd/: postmanq.go
cmd/postmanq/: BUILD.bazel  main.go  postmanq.go
configs/: config.example.yml  private_key.pem
deployments/: Dockerfile  docker-compose.infra.yml  docker-compose.postmanq.yml
mock/config/service/: config_provider.go
mock/module/: init_component.go  process_component.go  receive_component.go  send_component.go
mock/queue/service/: publisher.go
mock/validator/service/: validator.go
module/: BUILD.bazel  component.go  delivery.go  error.go  module.go  smtp.go
module/config/: BUILD.bazel  module.go
module/config/service/: BUILD.bazel  config_provider.go  config_provider_test.go  factory.go  provider.go  provider_test.go
module/config/service/mock/: config_provider.go
module/logger/: module.go
module/pipe/: module.go
module/pipe/component/: complete_sender.go  complete_stage.go  middleware_stage.go  parallel_middleware_stage.go  parallel_receiver.go  parallel_sender.go  pipe.go  receive_stage.go  runner.go  simple_sender.go  stage.go  stage_test.go  step.go  step_test.go
module/pipe/entity/: component.go  pipeline.go  stage.go
module/pipe/errors/: factory.go  stage.go
module/pipe/model/: component.go  config.go  pipe.go  pipeline.go  stage.go
module/pipe/service/: complete_stage.go  component_factory.go  middleware_stage.go  parallel_middleware_stage.go  pipeline.go  pipeline_factory.go  pipeline_test.go  receive_stage.go  stage.go  (+2 more)
module/queue/: module.go
module/rabbitmq/: module.go
module/smtp/: module.go
module/validator/: module.go
pkg/applicationfx/: generate.go
pkg/collection/: slice.go
pkg/commonfx/: module.go
pkg/config/: generate.go  services.go  values.go
pkg/configfx/: constructors.go  generate.go  module.go
pkg/log/: generate.go  services.go
pkg/logfx/: constructors.go  module.go
pkg/plugin/: values.go
pkg/postmanqfx/: generate.go  module.go
pkg/temporalfx/: generate.go  module.go
plugin/: plugin.go
plugin/config/: plugin.go
(+169 files in other folders)
