load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["module.go"],
    importpath = "github.com/postmanq/postmanq/module/config",
    visibility = ["//visibility:private"],
    deps = [
        "@org_uber_go_fx//:go_default_library",
        "@org_uber_go_config//:go_default_library",
        "//cli:go_default_library",
        "//module/config/service:go_default_library",
    ],
)

go_binary(
    name = "config",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    linkmode = "plugin"
)
