load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["provider.go"],
    importpath = "github.com/postmanq/postmanq/module/config/service",
    visibility = ["//visibility:public"],
    deps = [
        "@org_uber_go_config//:go_default_library",
#        "//cli:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["provider_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//suite:go_default_library",
        "@org_uber_go_config//:go_default_library",
    ],
)
